bynkc/tests/fixtures/negative/367_method_on_generic_type/input.bynk
commons bad

type Box[T] = { value: T }

fn Box.tag(self) -> String {
  "box"
}
